// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MapComponent should properly render initial state 1`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header />
</termo-map>
`;

exports[`MapComponent should render loading states 1`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header /><termo-map-location /><termo-map-location />
</termo-map>
`;

exports[`MapComponent should render loading states 2`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header /><termo-map-location /><termo-map-location />
</termo-map>
`;

exports[`MapComponent should render loading states 3`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header /><termo-map-location /><termo-map-location />
</termo-map>
`;

exports[`MapComponent should render loading states 4`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header /><termo-map-location /><termo-map-location />
</termo-map>
`;

exports[`MapComponent should render locations 1`] = `
<termo-map
  el={[Function ElementRef]}
  loading$="undefined"
  locations$={[Function BehaviorSubject]}
  mapFacade={[Function MockMapFacade]}
  selectedLocation$={[Function Subject]}
  updateMapRatio={[Function Function]}
>
  <termo-header /><termo-map-location /><termo-map-location />
</termo-map>
`;
